log/build_2023-10-10_14-31-39/rotors_evaluation/stderr.log
  File "home/quinton/catkin_ws/src/install/rotors_evaluation/lib/python3/dist-packages/rosbag_tools/analyze_bag.py", line 53
    except Exception, e:
                    ^
SyntaxError: invalid syntax

